--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Nextjs.ai, an open-source project under the MIT license, is maintained by Brett Lamy and is not affiliated with Vercel.
