--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+🎉 Discover NextJS AI Starter, GPT-backed NextJS boilerplate that puts typesafety and developer experience first!
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+## Roadmap
+- [ ] Add streaming to Examples
+- [ ] Do a better job of showing what happened in the event of an error
+- [ ] Retry with GPT-4
+- [ ] 
