--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -1,7 +1,14 @@
-# Getting Started
-Getting the starter kit running requires a few steps. You will need to create an account with [OpenAI](https://openai.com/) and [SerpApi](https://serpapi.com/). Once you have created an account, you will need to create an API key for each service. You will need to add these keys to your environment variables.
+import { Callout } from 'nextra-theme-docs'
 
-NOTE: You will only need an API Key for serp if you plan to keep the search tool that is used in the NFLScores demo.
+# Getting Started
+To get the starter kit up and running, follow these steps:
+1) Create an account with OpenAI (opens in a new tab) and SerpApi (opens in a new tab).
+2) Obtain an API key for each service.
+3) Add the API keys to your environment variables.
+
+<Callout type="info" emoji="ℹ️">
+  A SerpApi API key is only necessary if you intend to use the search tool featured in the NFLScores demo.
+</Callout>
 
 ## Vercel
 [![](https://vercel.com/button)](https://vercel.com/new/clone?s=https%3A%2F%2Fgithub.com%2Fblamy%2Fnextjs-ai-starter&showOptionalTeamCreation=false&env=SERP_API_KEY,OPENAI_API_KEY)
