--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,4 +6,4 @@
 - [ ] Add streaming to Examples
 - [ ] Do a better job of showing what happened in the event of an error
 - [ ] Retry with GPT-4
-- [ ] 
+- [ ] Validate guardrails outputs using [cli](https://shreyar.github.io/guardrails/cli/)
