--- a/pages/prompts.mdx
+++ b/pages/prompts.mdx
@@ -1,7 +1,7 @@
 # Prompt Types
 
 There are currently 3 types of prompts:
-- **Basic Prompts** - Prompts that provide no information about the users input or format of the assistants output.
-- **Rail Prompts** - Prompts that use the Guardrails framework to format the assistants output. 
-- **Typesafe Prompts** - Prompts defined natively in typescript. These prompts can be used to provide information about the users input, how the assistants ouptuts should be formatted, what errors that can occur, and what tools the LLM can use
+1) **Basic** - Prompts that provide no information about the users input or format of the assistants output.
+2) **Guardrails** - Prompts that use the Guardrails framework to format the assistants output. 
+3) **Typesafe** - Prompts defined natively in typescript. These prompts can be used to provide information about the users input, how the assistants ouptuts should be formatted, what errors that can occur, and what tools the LLM can use
 
