fix openai and serpapi links

--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -2,7 +2,7 @@ import { Callout } from 'nextra-theme-docs'
 
 # Getting Started
 To get the starter kit up and running, follow these steps:
-1) Create an account with OpenAI (opens in a new tab) and SerpApi (opens in a new tab).
+1) Create an account with [OpenAI](https://openai.com/) and [SerpApi](https://serpapi.com/).
 2) Obtain an API key for each service.
 3) Add the API keys to your environment variables.
 
