added components file

--- a/pages/prompts/basic.mdx
+++ b/pages/prompts/basic.mdx
@@ -2,9 +2,9 @@
 Basic prompts are ideal for simple prompts that don't require specific input variables or structured outputs.
 
 ### Creating a Basic Prompt
-If the prompt was a `Poem Generator`  
+If the prompt was a `Poem Generator` prompt, the prompt file would look like this:  
 
-```text filename="src/ai/prompts/PoemGenerator.Prompt"
+```text filename="./src/ai/prompts/PoemGenerator.Prompt"
 Write a Poem
 ```
 
