improved zod docs

--- a/pages/prompts/guardrails.mdx
+++ b/pages/prompts/guardrails.mdx
@@ -1,5 +1,5 @@
 # RAIL Files
-RAIL files help create structured outputs for prompts. To integrate with [Gaurdrails](https://github.com/ShreyaR/guardrails), create a .Prompt.rail file in the ./src/ai/prompts directory.
+RAIL files help create structured outputs for prompts. To integrate with [Gaurdrails](https://github.com/ShreyaR/guardrails), create a `.Prompt.rail` file in the `./src/ai/prompts` directory.
 
 These files are built during build time and are accessible as environment variables named after the prompt's filename.
 
