--- a/pages/prompts/typescript.mdx
+++ b/pages/prompts/typescript.mdx
@@ -29,14 +29,12 @@ let messages: ChatCompletionRequestMessage[] = [
 ```
 
 It is best to feed typesafe prompts as a system message, followed immediately by a user message.
-You can import types directly from typesafe prompts to use in your application code, as they are valid TypeScript.
+You can import types directly from typesafe prompts to use in your application code.
 ```typescript filename="./src/app/api/assistant.ts"
 import { Input as NumberGeneratorInput } from '@/ai/prompts/NumberGenerator.Prompt.ts'
 
 const input: NumberGeneratorInput = { min: 1, max: 100 };  
 
-// When using typesafe prompts the first request sent to chat completion should have both 
-// A system message and the user input fed in as a user message.
 messages = [
   {
     role: "system",
