--- a/pages/prompts/typescript.mdx
+++ b/pages/prompts/typescript.mdx
@@ -35,6 +35,8 @@ import { Input as NumberGeneratorInput } from '@/ai/prompts/NumberGenerator.Prom
 
 const input: NumberGeneratorInput = { min: 1, max: 100 };  
 
+// When using typesafe prompts the first request sent to chat completion should have both 
+// A system message and the user input fed in as a user message.
 messages = [
   {
     role: "system",
