--- a/pages/prompts/typescript/typesafe_agents.mdx
+++ b/pages/prompts/typescript/typesafe_agents.mdx
@@ -42,15 +42,9 @@ If all inputs are valid then you should perform the action described in the Prom
 
 ## Tool Example
 ```typescript filename="./src/ai/prompts/NFLScores.Prompt.ts"
-// ### Examples
-// USER: { "teamName": "49ers" }
-// ASSISTANT: { tool: "search", args: { query: "Score to most recent 49ers game" }}
-// SYSTEM: ull highlights, analysis and recap of 49ers win over Seahawks in NFC wild-card game. The NFL wild-card weekend kicked off Saturday with the 49ers beating the Seahawks 41-23 in the 2 seed-7 seed matchup of the NFC playoffs. Check in with The Athletic for all the latest news, highlights, reaction and analysis.
-// ASSISTANT: { tool: "calculator", args: { equation: "41-23" }}
-// SYSTEM: 18
-// ASSISTANT: { "winningTeam": "49ers", "homeTeam": "49ers", "awayTeam": "Seahawks", "homeScore": 41, "awayScore": 23, "spread": 18 }
-// 
-// ### Typescript
+require('@/ai/prompts/preambles/tools.turbo.Prompt.ts');
+require('@/ai/prompts/examples/NFLScores.Examples.json');
+
 type NFLTeams = "Cardinals" | "Falcons" | "Ravens" | "Bills" | "Panthers" | "Bears" | "Bengals" | "Browns" | "Cowboys" | "Broncos" | "Lions" | "Packers" | "Texans" | "Colts" | "Jaguars" | "Chiefs" | "Dolphins" | "Vikings" | "Patriots" | "Saints" | "Giants" | "Jets" | "Raiders" | "Eagles" | "Steelers" | "Chargers" | "49ers" | "Seahawks" | "Rams" | "Buccaneers" | "Titans" | "Commanders";
 
 export type Prompt = "Can you tell me the results to the most recent {{teamName}} game then calculate the spread.";
