update preamble file path

--- a/pages/prompts/typescript.mdx
+++ b/pages/prompts/typescript.mdx
@@ -56,7 +56,7 @@ messages = [
 ## The Preamble
 When typesafe prompts are built, a preamble is added at the beginning of the prompt.
 
-```text filename="The Preamble"
+```text filename="@/ai/prompts/preambles/basic.turbo.Prompt.ts"
 You will function as a JSON api
 The user will feed you valid JSON and you will return valid JSON do not add any extra characters to the output that would make your output invalid JSON
 
