--- a/pages/prompts/typescript/zod_validation.mdx
+++ b/pages/prompts/typescript/zod_validation.mdx
@@ -5,8 +5,8 @@ Zod is a typescript library that allows you to define a schema for your types.
 The difference between zod and typescript is that zod allows you to validate data at runtime instead of just providing static analysis a build time.
 Zod will also allow you to make assertions that are difficult to make in typescript such as number max and mins. 
 ```typescript filename="./src/ai/prompts/NumberGenerator.Prompt.ts"
-require('@/ai/prompts/preambles/basic.turbo.Prompt.ts');
-require('@/ai/prompts/examples/NumberGenerator.Examples.json');
+import '@/ai/prompts/preambles/basic.turbo.Prompt.ts';
+import '@/ai/prompts/examples/NumberGenerator.Examples.json';
 
 import { z } from 'zod';
 const inputSchema = z.object({
@@ -66,8 +66,8 @@ Defining an output using Zod doesn't always work perfectly on 3.5-Turbo but if y
 
 ### Example
 ```typescript filename="./src/ai/prompts/JokeGenerator.Prompt.ts"
-require('@/ai/prompts/preambles/basic.turbo.Prompt.ts');
-require('@/ai/prompts/examples/JokeGenerator.Examples.json');
+import '@/ai/prompts/preambles/basic.turbo.Prompt.ts';
+import '@/ai/prompts/examples/JokeGenerator.Examples.json';
 
 import { z } from 'zod';
 
