prambles are .txt files now

--- a/pages/prompts/basic.mdx
+++ b/pages/prompts/basic.mdx
@@ -4,7 +4,7 @@ Basic prompts are ideal for simple prompts that don't require specific input var
 ### Creating a Basic Prompt
 If the prompt was a `Poem Generator` prompt, the prompt file would look like this:  
 
-```text filename="./src/ai/prompts/PoemGenerator.Prompt"
+```text filename="./src/ai/prompts/PoemGenerator.Prompt.txt"
 Write a Poem
 ```
 
